@@ -4,6 +4,9 @@ Griffith ChangeLog
 ------------------
 (c) 2005-2007  Vasco Nunes, Piotr Ożarowski
 
+2007-07-03 Michael Jahn
+	* DVD-Palace movie plugin updated
+
 ---- 0.9.3.1 ---
 
 2007-07-01  Piotr Ożarowski
